Add and manage model findings > Add and manage artifacts*

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -1,11 +1,12 @@
 ---
-title: "Add and manage model findings"
+title: "Add and manage artifacts"
 date: last-modified
 aliases: 
   - add-update-model-findings.html
+  - add-manage-model-findings.html
 ---
 
-Add findings at the model or documentation section level, update your findings to include proposed remediation plans and supporting documentation, or delete findings that no longer need to be tracked.
+Add artifacts at the model or documentation section level, update your artifacts to include proposed remediation plans and supporting documentation, or delete artifacts that no longer need to be tracked.
 
 ::: {.attn}
 
@@ -14,12 +15,12 @@ Add findings at the model or documentation section level, update your findings t
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
-- [x] Finding statuses have been set up for use with findings.[^3]
+- [x] Finding statuses have been set up for use with artifacts.[^3]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
 
 :::
 
-## Add findings on documentation
+## Add artifacts on documentation
 
 {{< include _add-model-findings.qmd >}}
 
@@ -27,19 +28,19 @@ Add findings at the model or documentation section level, update your findings t
 
 <!-- ::: {.panel-tabset}
 
-#### Add findings via overview
+#### Add artifacts via overview
 
 {{< include _add-finding-via-overview.qmd >}}
 
-#### Add findings via section
+#### Add artifacts via section
 
 {{< include _add-finding-via-section.qmd >}}
 
 ::: -->
 
-## Add findings on validation reports
+## Add artifacts on validation reports
 
-When linking findings to validation reports,[^5] you can add findings as you assess a model's compliance:
+When linking artifacts to validation reports,[^5] you can add artifacts as you assess a model's compliance:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -59,9 +60,9 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 7. When you are done, click **Save** to submit the finding.
 
-## Update model findings
+## Update model artifacts
 
-As findings get resolved or require other changes during the model validation process, you can update them:
+As artifacts get resolved or require other changes during the model validation process, you can update them:
 
 1. Locate the finding you want to update.[^9]
 
@@ -83,28 +84,28 @@ After a finding is created, you're able to add supporting documentation to it.
 
 ::: {.panel-tabset}
 
-#### Add attachments to findings
+#### Add attachments to artifacts
 
 ::: {.callout}
 Uploaded files must be less than 50 MB each in size.
 :::
 
-1. On the findings detail page, click on the **[attachments]{.smallcaps}** header.
+1. On the artifacts detail page, click on the **[attachments]{.smallcaps}** header.
 
 {{< include /guide/model-inventory/_add-attachments.qmd >}}
 
-#### Remove attachments from findings
+#### Remove attachments from artifacts
 
-1. On the findings detail page, click on the **[attachments]{.smallcaps}** header.
+1. On the artifacts detail page, click on the **[attachments]{.smallcaps}** header.
 
 {{< include /guide/model-inventory/_remove-attachments.qmd >}}
 
 :::
 
-## Delete model findings
+## Delete model artifacts
 
 ::: {.callout-important title="Finding deletion is permanent."}
-- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted findings cannot be retrieved.
+- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted artifacts cannot be retrieved.
 - Deleting a finding will also remove it from any validation reports[^11] it was previously attached to.
 
 :::
