--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -76,7 +76,7 @@ Deletion of saved views is permanent.
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-model-findings.qmd)
+[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
 
 [^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
