--- a/site/guide/model-validation/customize-finding-overview-page.qmd
+++ b/site/guide/model-validation/customize-finding-overview-page.qmd
@@ -44,7 +44,7 @@ Default fields will always appear on your finding overview pages and are represe
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-model-findings.qmd)
+[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
 
 [^3]: [View and filter model findings](view-filter-artifacts.qmd)
 
