--- a/site/guide/model-validation/working-with-artifacts.qmd
+++ b/site/guide/model-validation/working-with-artifacts.qmd
@@ -11,7 +11,7 @@ listing:
     contents:
       - view-filter-artifacts.qmd
       - customize-artifact-layouts.qmd
-      - add-manage-model-findings.qmd
+      - add-manage-artifacts.qmd
       - customize-finding-overview-page.qmd
 aliases:
   - work-with-model-findings.html
