--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -99,7 +99,7 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-model-findings.qmd)
+[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
@@ -107,7 +107,7 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^6]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
+[^6]: [Manage supporting documentation](add-manage-artifacts.qmd#manage-supporting-documentation)
 
 [^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
