Customize finding overview page > Customize artifact overview page*

--- a/site/guide/model-validation/customize-artifact-overview-page.qmd
+++ b/site/guide/model-validation/customize-artifact-overview-page.qmd
@@ -1,12 +1,14 @@
 ---
-title: "Customize finding overview page"
+title: "Customize artifact overview page"
 date: last-modified
+aliases: 
+  - customize-finding-overview-page.html
 ---
 
-Configure what and how finding fields appear when you pull up findings logged on models.
+Configure what and how finding fields appear when you pull up artifacts logged on models.
 
 :::{.callout title="Changes are automatically saved to your account and do not affect other users."}
-Customizations will apply to all findings in your inventory.
+Customizations will apply to all artifacts in your inventory.
 
 :::
 
@@ -16,7 +18,7 @@ Customizations will apply to all findings in your inventory.
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on models.[^2]
+- [x] There are artifacts logged on models.[^2]
 
 :::
 
