Fix wording for what we sync

--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -9,7 +9,7 @@ Adapt these usage examples for your own workflows or connections to interact wit
 - [Create a ServiceNow incident](#create-a-servicenow-incident)
 - [Start workflows via webhook](#start-workflows-via-webhook)
 - [Add webhook step triggers](#add-webhook-step-triggers)
-- [Synchronize the model inventory with AWS SageMaker](#synchronize-the-model-inventory-with-aws-sagemaker)
+- [Synchronize models with AWS SageMaker](#synchronize-models-with-aws-sagemaker)
 
 ::: {.attn}
 
@@ -214,12 +214,12 @@ curl -X POST https://api.prod.vm.validmind.ai/vm/api/v1/webhooks/xxxxxxxxxxxxxxx
 
 ## Connection examples
 
-### Synchronize the model inventory with AWS SageMaker
+### Synchronize models with AWS SageMaker
 
-To synchronize the {{< var vm.product >}} model inventory with AWS SageMaker for unified model tracking:
+To synchronize models registered in the {{< var vm.product >}} model inventory with AWS SageMaker models:
 
 ::: {.column-margin}
-![Sync with AWS SageMaker](integrations-examples-aws-sagemaker.png){width=80% fig-alt="Screenshot of the AWS Sagemaker connection configured to synchronize the model inventory, showing the required fields described in step 5." .screenshot}
+![Sync with AWS SageMaker](integrations-examples-aws-sagemaker.png){width=80% fig-alt="Screenshot of the AWS Sagemaker connection configured to synchronize models, showing the required fields described in step 5." .screenshot}
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
