Edit: Link text

--- a/site/faq/faq-validation.qmd
+++ b/site/faq/faq-validation.qmd
@@ -62,6 +62,6 @@ By default, the [{{< fa circle-check >}} Validator]{.bubble} role has sufficient
 
 [^3]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
-[^4]: [Add and manage model findings](/guide/model-validation/add-manage-artifacts.qmd)
+[^4]: [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
-[^5]: [View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd)
+[^5]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd)
