--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -102,6 +102,6 @@ Work with your model risk management team to create a template that accurately r
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model findings](/guide/model-validation/working-with-artifacts.qmd)
+[^2]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd) 
