--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -78,7 +78,7 @@ Shows test results logged for your model via the {{< var validmind.developer >}}
 
 [^6]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^7]: [Working with model findings](/guide/model-validation/working-with-artifacts.qmd)
+[^7]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
 [^8]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
