--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -76,7 +76,7 @@ Deletion of saved views is permanent.
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
 [^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
@@ -86,5 +86,5 @@ Deletion of saved views is permanent.
 
 [^6]: [Customize finding type layouts](#customize-finding-type-layouts)
 
-[^7]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^7]: [Filter and sort model findings](#filter-and-sort-artifacts)
 
