--- a/site/guide/model-validation/customize-artifact-overview-page.qmd
+++ b/site/guide/model-validation/customize-artifact-overview-page.qmd
@@ -46,9 +46,9 @@ Default fields will always appear on your finding overview pages and are represe
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
-[^3]: [View and filter model findings](view-filter-artifacts.qmd)
+[^3]: [View and filter artifacts](view-filter-artifacts.qmd)
 
 [^4]: [Manage model finding fields](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)
 
