--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -26,7 +26,7 @@ You can review artifacts for all models at once, or only look at artifacts linke
 
 #### All model artifacts
 
-{{< include _view-all-findings.qmd >}}
+{{< include _view-all-artifacts.qmd >}}
 
 #### Model-specific artifacts
 
@@ -61,7 +61,7 @@ To view artifacts linked to a specific model:
 
 :::
 
-## Filter and sort model artifacts
+## Filter and sort artifacts
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
@@ -99,7 +99,7 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
