--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -19,7 +19,7 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — All finding types logged on models.^[[Working with model findings](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Findings** — All finding types logged on models.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
     - **Inventory Models** — Models logged in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
     - **Model Limitations** — Logged Model Limitation type findings only.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
     - **Policy Exceptions** — Logged Policy Exception type findings only.
