--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -39,11 +39,11 @@ Export tracked model findings as comma-delimited tables (`.csv`).
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](/guide/model-validation/add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
 [^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^4]: [View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-model-findings)
+[^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)
 
 [^5]: [Customize model findings layouts](/guide/model-validation/customize-artifact-layouts.qmd#customize-finding-type-layouts)
 
