--- a/site/guide/reporting/view-report-data.qmd
+++ b/site/guide/reporting/view-report-data.qmd
@@ -24,4 +24,4 @@ Review detailed data on your models or model findings within the {{< var validmi
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](/guide/model-validation/add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
