--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -133,7 +133,7 @@ Rearrange report widgets on your analytics pages, including your custom pages:[^
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Add and manage model findings](/guide/model-validation/add-manage-artifacts.qmd)
+[^2]: [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
 [^3]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
