--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -8,7 +8,7 @@ To add a new blank workflow:
 1. Select the tab for the type of workflow to add:
 
     - **Model Workflows** — Workflows that apply to models in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
-    - **Finding Workflows** — Workflows that apply to logged findings.^[[Working with model findings](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Finding Workflows** — Workflows that apply to logged findings.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
 
 ::: {.panel-tabset}
 
@@ -63,7 +63,7 @@ a. Click **Add Finding Workflow** to save your blank workflow, and then [configu
 
     ::: {.callout title="Please note that only one workflow can be configured to initiate on registration for each type of finding."}
     <br>
-    [Add and manage model findings](/guide/model-validation/add-manage-artifacts.qmd)
+    [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
     :::
 
