--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -35,7 +35,7 @@ If workflows are running or have previously run on your model, you can:
 
 #### On findings
 
-On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the Workflows section that shows a timeline of workflows associated with that finding.
+On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the Workflows section that shows a timeline of workflows associated with that finding.
 
 Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
