--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-To view findings for all models:
+To view artifacts for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
@@ -9,10 +9,10 @@ To view findings for all models:
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model findings for that type.
+   In the page that opens is a list of all model artifacts for that type.
 
    ::: {.callout}
-   Filter this list to include only findings you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-model-findings)] or toggle visibilty for column headers.^[[Customize model findings layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+   Filter this list to include only artifacts you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize model findings layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
 
    :::
 
@@ -32,7 +32,7 @@ To view findings for all models:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-To view findings for all models: 
+To view artifacts for all models: 
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
@@ -42,9 +42,9 @@ To view findings for all models:
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model findings for that type.
+   In the page that opens is a list of all model artifacts for that type.
 
-    [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-model-findings){target="_blank"} to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
+    [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only artifacts you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
 
 1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
 
