--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -26,7 +26,7 @@ To manually start workflows[^initiate-workflows]:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the Workflows section.
+1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the Workflows section.
 
 1. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
 
@@ -59,7 +59,7 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
 
