--- a/site/guide/workflows/_reset-workflows.qmd
+++ b/site/guide/workflows/_reset-workflows.qmd
@@ -23,7 +23,7 @@ To reset a workflow to the beginning:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
 
