--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -24,7 +24,7 @@ To review details for workflows currently active:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of any active workflow to review that specific workflow's details.
 
