--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -86,5 +86,5 @@ Deletion of saved views is permanent.
 
 [^6]: [Customize finding type layouts](#customize-finding-type-layouts)
 
-[^7]: [Filter and sort model findings](#filter-and-sort-artifacts)
+[^7]: [Filter and sort artifacts](#filter-and-sort-artifacts)
 
