--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -18,35 +18,33 @@ Access a complete list of filterable artifacts logged across all your models in 
 
 :::
 
-## View model artifacts
+## View artifacts
 
-You can review artifacts for all models at once, or only look at artifacts linked to a specific model.
+You can view artifacts for all models at once, or only view artifacts linked to a specific model.
 
-::: {.panel-tabset}
+::: {.callout}
+Within the {{< var validmind.platform >}}, artifacts are spilt into validation issues and other artifact types.[^4]
+:::
 
-#### All model artifacts
+### View all artifacts
 
 {{< include _view-all-artifacts.qmd >}}
 
-#### Model-specific artifacts
+### View model-specific artifacts
 
-To view artifacts linked to a specific model:
+::: {.panel-tabset}
+
+#### View model-specific validation issues
+
+To view validation issues linked to a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^4]
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
+3. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Validation Issues**.
 
-4. Select a finding type[^5] to view from the tabs:
-
-   - Validation Issue
-   - Policy Exception
-   - Model Limitation
-
-   In the page that opens is a list of all model artifacts for that type.
-
-4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^6]
+4. Click on any validation issue for more information, including the proposed remediation plan and any supporting attachments.[^6]
 
    Attachments are listed with the following information:
 
@@ -59,7 +57,27 @@ To view artifacts linked to a specific model:
 
    Click on the attachment to view or download the file.
 
+#### View model-specific artifacts of other types
+
+To view other artifact types linked to a specific model:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^7]
+
+3. In the left sidebar that appears for your model, click **{{< fa border-all >}} Artifacts**.
+
+4. Select an artifact type[^8] to view from the tabs:
+
+   - Policy Exception
+   - Model Limitation
+
+   In the page that opens is a list of all model artifacts for that type.
+
+4. Click on any artifact for more information.
+
 :::
+
 
 ## Filter and sort artifacts
 
@@ -103,13 +121,21 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^6]: [Manage supporting documentation](add-manage-artifacts.qmd#manage-supporting-documentation)
 
-[^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^8]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+
+
+<!-- 
+
+
+
 
 [^8]:
 
@@ -119,4 +145,6 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
    - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
    - **[severity]{.smallcaps}**
    - **[assigned to]{.smallcaps}**
+
+   -->
 
