--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -45,7 +45,7 @@ Export tracked model findings as comma-delimited tables (`.csv`).
 
 [^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)
 
-[^5]: [Customize model findings layouts](/guide/model-validation/customize-artifact-layouts.qmd#customize-finding-type-layouts)
+[^5]: [Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd#customize-finding-type-layouts)
 
 
 
