--- a/site/guide/workflows/configure-workflows.qmd
+++ b/site/guide/workflows/configure-workflows.qmd
@@ -138,7 +138,7 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-model-findings)
+[^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)
 
 [^5]: [Configure workflow steps](#configure-workflow-steps)
 
