--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -1,22 +1,55 @@
 :::: {.content-visible unless-format="revealjs"}
-To view artifacts for all models:
+::: {.panel-tabset}
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
+#### View all validation issues
 
-1. Select a finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
+In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view a list of validation issues across all models:
 
-   - Validation Issue
+- Filter this list to include only artifacts you want to see,^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+
+- Click on any validation issue for more information, including the proposed remediation plan and any supporting attachments.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)]
+
+   Attachments are listed with the following information:
+
+   - Filename
+   - Icon representing file type
+   - Date uploaded
+   - The user who uploaded the file
+   - File size
+   - Notes
+
+   Click on the attachment to view or download the file.
+
+#### View all other artifacts
+
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types for all models.
+
+1. Select an artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
+
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model artifacts for that type.
+   In the page that opens is a list of all artifacts for that type.
 
-   ::: {.callout}
-   Filter this list to include only artifacts you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize model findings layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+   - Filter this list to include only artifacts you want to see,^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+   -  Click on any artifact for more information.
 
-   :::
 
-1. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)]
+:::
+
+::::
+
+:::: {.content-hidden unless-format="revealjs"}
+
+#### View all validation issues
+
+To view a list of validation issues across all models:
+
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
+
+    [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only artifacts you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
+
+1. Click on any validation issue for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
 
    Attachments are listed with the following information:
 
@@ -29,34 +62,21 @@ To view artifacts for all models:
 
    Click on the attachment to view or download the file.
 
-::::
+#### View all other artifacts
 
-:::: {.content-hidden unless-format="revealjs"}
-To view artifacts for all models: 
+To view lists of other artifact types for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
 1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view from the tabs:
 
-   - Validation Issue
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model artifacts for that type.
+   In the page that opens is a list of all artifacts for that type.
 
     [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only artifacts you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
 
-1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
-
-   Attachments are listed with the following information:
-
-   - Filename 
-   - Icon representing file type
-   - Date uploaded
-   - The user who uploaded the file
-   - File size
-   - Notes
-
-   Click on the attachment to view or download the file.
+1. Click on any artifact for more information.
 
 ::::
