--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -32,19 +32,19 @@ Within the {{< var validmind.platform >}}, artifacts are spilt into validation i
 
 ### View model-specific artifacts
 
-::: {.panel-tabset}
-
-#### View model-specific validation issues
-
-To view validation issues linked to a specific model:
-
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Validation Issues**.
+3. View validation issues or other artifact types for that model.
 
-4. Click on any validation issue for more information, including the proposed remediation plan and any supporting attachments.[^6]
+::: {.panel-tabset}
+
+#### View model-specific validation issues
+
+a. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Validation Issues**.
+
+b. Click on any validation issue for more information, including the proposed remediation plan and any supporting attachments.[^6]
 
    Attachments are listed with the following information:
 
@@ -59,22 +59,16 @@ To view validation issues linked to a specific model:
 
 #### View model-specific artifacts of other types
 
-To view other artifact types linked to a specific model:
+a. In the left sidebar that appears for your model, click **{{< fa border-all >}} Artifacts**.
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^7]
-
-3. In the left sidebar that appears for your model, click **{{< fa border-all >}} Artifacts**.
-
-4. Select an artifact type[^8] to view from the tabs:
+b. Select an artifact type[^7] to view from the tabs:
 
    - Policy Exception
    - Model Limitation
 
    In the page that opens is a list of all model artifacts for that type.
 
-4. Click on any artifact for more information.
+c. Click on any artifact for more information.
 
 :::
 
@@ -127,9 +121,7 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^6]: [Manage supporting documentation](add-manage-artifacts.qmd#manage-supporting-documentation)
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^8]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
 
 <!-- 
