View and filter artifacts > Filter and sort artifacts

--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -22,7 +22,7 @@ In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues**
 
 #### View all other artifacts
 
-1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types for all models.
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
 
 1. Select an artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
 
@@ -64,7 +64,7 @@ To view a list of validation issues across all models:
 
 #### View all other artifacts
 
-To view lists of other artifact types for all models:
+To view lists of other artifact types across all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
