--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -66,7 +66,7 @@ b. Select an artifact type[^7] to view from the tabs:
    - Policy Exception
    - Model Limitation
 
-   In the page that opens is a list of all model artifacts for that type.
+   In the page that opens is a list of all artifacts for that type.
 
 c. Click on any artifact for more information.
 
@@ -82,27 +82,36 @@ Changes are automatically saved to your account and do not affect other users.
 - By default, artifacts for all models are listed by creation date in descending order.
 - To sort artifacts by a column in ascending ({{< fa angle-down >}}) or descending ({{< fa angle-up >}}) order, click on the column header.
 
-To narrow down the artifacts, you can apply some filters:
+To narrow down artifacts, you can apply some filters:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
+::: {.panel-tabset}
 
-2. Select a finding type[^7] to view from the tabs:
+### Filter all validation issues
 
-   - Validation Issue
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view a list of validation issues across all models.
+
+2. Click **{{< fa filter >}} Filter**.
+
+3. On the Select Your Filters dialog that opens, enter your filtering criteria.[^8]
+
+4. Click **Apply Filters**.
+
+### Filter all other artifacts
+
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
+
+2. Select an artifact type[^9] to view from the tabs:
+
    - Policy Exception
    - Model Limitation
 
 3. Click **{{< fa filter >}} Filter**.
 
-4. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^8]
-
-   For example, to filter by open artifacts for the Customer Churn Model assigned to Jane Doe:
-
-      - **[status]{.smallcaps}** — `Open`
-      - **[model inventory]{.smallcaps}** — `Customer Churn Model`
-      - **[assigned to]{.smallcaps}** — `Jane Doe`
+4. On the Select Your Filters dialog that opens, enter your filtering criteria.[^10]
 
 5. Click **Apply Filters**.
+
+:::
 
 Filters can be removed by clicking on the {{< fa xmark >}} next to them on the main **{{< fa triangle-exclamation >}} Findings** page where the results are displayed.
 
@@ -123,12 +132,6 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-
-<!-- 
-
-
-
-
 [^8]:
 
    - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
@@ -136,7 +139,12 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
    - [**[risk area]{.smallcaps}**](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
    - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
    - **[severity]{.smallcaps}**
-   - **[assigned to]{.smallcaps}**
+   - **[assignee]{.smallcaps}**
 
-   -->
+[^9]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
+[^10]:
+
+   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
+   - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
+   - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
