Customize artifact layouts: Customize artifact layouts by type

--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -5,7 +5,7 @@ aliases:
   - customize-model-findings-layouts.qmd
 ---
 
-Configure the information that displays by default on the list of all tracked model artifacts for each finding type.
+Configure the information that displays by default on the list of all tracked model artifacts for each artifact type.
 
 ::: {.attn}
 
@@ -17,29 +17,48 @@ Configure the information that displays by default on the list of all tracked mo
 
 :::
 
-## Customize finding type layouts
+## Customize artifact layouts by type
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
 :::
 
-Customize what is displayed on your list of all model artifacts for each finding type:
+Customize what is displayed on your list of all artifacts for each artifact type:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
+::: {.panel-tabset}
 
-2. Select a finding type[^3] to view from the tabs:
+#### Customize layout for validation issues
 
-   - Validation Issue
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view a list of validation issues across all models:
+
+2. Click **{{< fa table >}} Manage Columns**.
+
+   - Search for a column name in the list to narrow down results.
+   - Toggle visibility for each item and drag each option to change the order.
+   - Available columns are determined by your artifact fields.[^3]
+
+Once customized, you can save a view for later application.[^4]
+
+#### Customize layout for all other artifact types
+
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
+
+2. Select an artifact type[^5] to view from the tabs:
+
    - Policy Exception
    - Model Limitation
+
+   In the page that opens is a list of all artifacts for that type.
 
 3. Click **{{< fa table >}} Manage Columns**.
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your model finding fields.[^4]
+   - Available columns are determined by your artifact fields.[^6]
 
-Once customized, you can save a view for later application.[^5]
+Once customized, you can save a view for later application.[^7]
+
+:::
 
 ### Manage custom artifacts views
 
@@ -51,7 +70,7 @@ Saved views are unique to you and do not display for other users in your organiz
 
 #### Save artifacts views
 
-You can save custom artifacts configuration as a view to reapply at any time for each finding type:
+You can save custom artifacts configuration as a view to reapply at any time for each artifact type:
 
 1. Customize a artifacts layout.[^6]
 
@@ -78,13 +97,14 @@ Deletion of saved views is permanent.
 
 [^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
-[^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^3]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
-[^4]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^4]: [Manage custom artifact views](#manage-custom-artifact-views)
 
-[^5]: [Manage custom findings views](#manage-custom-findings-views)
+[^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^6]: [Customize finding type layouts](#customize-finding-type-layouts)
+[^6]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
-[^7]: [Filter and sort artifacts](#filter-and-sort-artifacts)
+[^7]: [Manage custom artifact views](#manage-custom-artifact-views)
+
 
