Customize artifact layouts: Manage custom artifact views

--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -60,31 +60,44 @@ Once customized, you can save a view for later application.[^7]
 
 :::
 
-### Manage custom artifacts views
+## Manage custom artifact views
 
 :::{.callout}
 Saved views are unique to you and do not display for other users in your organization.
 :::
 
-::: {.panel-tabset}
 
-#### Save artifacts views
+### Save artifact views
 
-You can save custom artifacts configuration as a view to reapply at any time for each artifact type:
+You can save custom artifact configurations as a view to reapply at any time for each artifact type:
 
-1. Customize a artifacts layout.[^6]
+1. First, customize a artifact layout.[^6]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^7]
+   You can also apply filters or sorting before saving your view to include them in the view.[^8]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
-#### Edit or remove saved artifacts views
+### Edit or remove saved artifact views
 
 ::: {.callout-important}
 Deletion of saved views is permanent.
 :::
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model artifacts.
+::: {.panel-tabset}
+
+#### Edit or remove validation issue views
+
+To modify a saved validation issues view:
+
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** for a list of validation issues across all models.
+
+{{< include /guide/model-inventory/_remove-layout-view.qmd >}}
+
+#### Edit or remove all other artifact type views
+
+To modify a saved view for all other artifact types:
+
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** for lists of other artifact types across all models.
 
 {{< include /guide/model-inventory/_remove-layout-view.qmd >}}
 
@@ -107,4 +120,4 @@ Deletion of saved views is permanent.
 
 [^7]: [Manage custom artifact views](#manage-custom-artifact-views)
 
-
+[^8]: [Filter and sort artifacts](view-filter-artifacts.qmd#filter-and-sort-artifacts)
